2002-10-19  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-reader.c:
	(reader_start): no need to check for YELP_URI_TYPE_GHELP_OTHER
	  since it will never get here with that URI type.
	(yelp_reader_start): Check for file, unknown and ghelp_other and
	  display it with gnome_uri_show, fixes #95181, thanks Paolo for
	  investigating this.

2002-10-08  Paolo Maggi <maggi@athena.polito.it>

	* src/yelp-window.[ch]: YelpWindow is now inherited from GnomeApp.
	The window title is now "title - Help Browser", instead of 
	"Help Browser:title", in this way you can see in the tasklist applet
	the name of the loaded page.
	Removed the gconf stuff since is no more needed.
	Note that Yelp still does not monitor menus_have_icons gconf key

	* src/yelp-view-content.c (content_show_uri): set the loading page
	title to "Loading...", instead of ".."

	* src/yelp-view-index.c (index_show_uri): ditto
	(set_relation): removed since no more needed
	(yelp_view_index_new): add an accellerator to "Search for:"

2002-10-04  Marius Andreiana <mandreiana@yahoo.com>

	* stylesheets/yelp-customization.xsl: made translatable the
	following strings: Next,Previous,Contents,About This Document
	* stylesheets/l10n.xml: added strings Next,Previous,Contents
	
2002-10-04  Mikael Hallendal  <micke@codefactory.se>

	* NEWS: updated for 2.1.0

	* configure.in: bumped version to 2.1.0, did a large jump here to
	  reach GNOME version numbers.

	* autogen.sh: don't use gnome-common

2002-09-23  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-db2html.c: Don't include libgnome and gnome-vfs stuff.

	* configure.in: Added DB2HTML_* variables.

	* src/Makefile.am (test_uri_LDADD): use special LIBS for
	  yelp-db2html.

2002-09-23  Sander Vesik <sander.vesik@sun.com>

	* stylesheets/yelp-customization.xsl:
	- fix some cases of 'next' not leading anywhere on the TOC page
	- fix user guide documents occasionaly having the 'Previous' link
	  point to nowhere in the chunk "following" TOC
